--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "js-cookie": "^3.0.5",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swiper": "^9.1.1",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.3"
   }
 }
